--- a/site/package.json
+++ b/site/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.17",
     "@sveltejs/kit": "^1.0.0-next.156",
+    "@svicons/octicons": "^0.1.3",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
