--- a/.github/workflows/updateScreenshots.yml
+++ b/.github/workflows/updateScreenshots.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Push new screenshots
         run: |
-          if [[ -n $(git status -s) ]]; then
+          if [[ -n $(git status -s site/static/screenshots) ]]; then
             git config user.name github-actions
             git config user.email github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
             git add site/static/screenshots/*
