--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,13 @@ repos:
     rev: v1.26.3
     hooks:
       - id: yamllint
+        args: [--config-file, dotfiles/.yamllint.yml]
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.29.0
+    hooks:
+      - id: markdownlint
+        args: [--config, dotfiles/.markdownlint.yml]
 
   - repo: local
     hooks:
