--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,8 @@
 base = "site/"
 command = "yarn build"
 publish = "build"
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../sites.yml"
+
 
 [build.environment]
 NODE_VERSION = "16.9.0"
