throw in some more icons in the modal details view

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,3 +43,9 @@ repos:
         entry: screenshot filenames must end in .webp
         language: fail
         files: '^site/static/screenshots/.*(?<!\.webp)$'
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      - id: codespell
+        exclude: yarn.lock
