--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.20",
     "@sveltejs/kit": "^1.0.0-next.178",
     "@svicons/octicons": "^0.1.3",
+    "@svicons/fa-brands": "^0.1.3",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
