add site 33 https://pudding.cool, add more creators to existing sites, add eslint pre-commit

--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -3,7 +3,7 @@ name: Link check
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *" # monthly
+    - cron: '0 0 1 * *' # monthly
 
 jobs:
   markdown-link-check:
