--- a/.github/workflows/updateScreenshots.yml
+++ b/.github/workflows/updateScreenshots.yml
@@ -3,7 +3,7 @@ name: Update Site Screenshots
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 */3 *" # https://crontab.guru/every-quarter
+    - cron: '0 0 1 */3 *' # https://crontab.guru/every-quarter
 
 jobs:
   take-screenshots:
