--- a/.github/workflows/updateScreenshots.yml
+++ b/.github/workflows/updateScreenshots.yml
@@ -29,7 +29,7 @@ jobs:
             echo "No changes to commit"
             exit 0
           fi
-          git config user.name='Janosh Riebesell'
-          git config user.email=janosh.riebesell@gmail.com
+          git config user.name 'Janosh Riebesell'
+          git config user.email janosh.riebesell@gmail.com
           git commit -a -m 'update site screenshots'
           git push
