--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 ci:
   autoupdate_schedule: quarterly
 
+default_stages: [commit]
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -42,6 +44,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: codespell
+        stages: [commit, commit-msg]
         exclude: yarn.lock
 
   - repo: https://github.com/pre-commit/mirrors-eslint
