Auto-generate readme site list (#50)
* yarn add -D svelte-github-corner

* use target _blank links on desktop (followup #48)

* move dateAdded info from readme to sites.yml

* sites.yml split some tags into uses + tags, update deps

* fix sveltekit breaking load fn change, make fallthrough explicit

* add site/scripts/makeReadmeSiteList.js, apply resulting changes to readme

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -93,11 +93,12 @@ repos:
         entry: '\S+\s{2,}'
         language: pygrep
         types: [text]
+        exclude_types: [javascript]
 
   - repo: local
     hooks:
       - id: format-urls
         name: Format URLs
-        entry: ./utils/format_urls.py
+        entry: utils/format_urls.py
         language: python
         files: ^(sites.yml|readme.md|utils/format_urls.py)$
