--- a/site/package.json
+++ b/site/package.json
@@ -20,26 +20,27 @@
     "check": "svelte-check"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
-    "@sveltejs/kit": "^1.0.0-next.196",
-    "@svicons/fa-brands": "^0.1.5",
-    "@svicons/octicons": "^0.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-svelte3": "^3.2.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.26",
+    "@sveltejs/kit": "^1.0.0-next.225",
+    "@svicons/fa-brands": "^0.1.6",
+    "@svicons/octicons": "^0.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-svelte3": "^3.3.0",
     "js-yaml": "^4.1.0",
     "node-fetch": "^3.1.0",
-    "prettier": "^2.3.2",
-    "prettier-plugin-svelte": "^2.5.0",
-    "puppeteer": "^11.0.0",
-    "svelte": "^3.44.2",
-    "svelte-check": "^2.2.10",
-    "svelte-multiselect": "^2.0.0",
-    "svelte-preprocess": "^4.9.8",
-    "svelte2tsx": "^0.4.10",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14"
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.5.1",
+    "puppeteer": "^13.0.1",
+    "svelte": "^3.46.0",
+    "svelte-check": "^2.2.12",
+    "svelte-github-corner": "^0.1.0",
+    "svelte-multiselect": "^3.0.1",
+    "svelte-preprocess": "^4.10.1",
+    "svelte2tsx": "^0.4.13",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10"
   },
   "keywords": [
     "svelte-kit",
