--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
 base = "site/"
 command = "yarn build"
 publish = "build"
+# redeploy if sites.yml or base directory site/ changed
 ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../sites.yml"
 
 
