takeScreenshots.js create small + large (now 1200x900) images, use small in SiteList, large in SiteDetails, compress both with imagemin-webp

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 17
 
       - name: Install dependencies
-        run: yarn add puppeteer js-yaml
+        run: yarn add puppeteer js-yaml imagemin imagemin-webp
 
       - name: Update existing screenshots on scheduled runs
         if: github.event_name == 'schedule'
