--- a/site/package.json
+++ b/site/package.json
@@ -28,6 +28,8 @@
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
     "eslint-plugin-svelte3": "^3.3.0",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
     "node-fetch": "^3.1.0",
     "prettier": "^2.5.1",
