--- a/site/package.json
+++ b/site/package.json
@@ -7,9 +7,7 @@
   "license": "MIT",
   "version": "0.1.0",
   "type": "module",
-  "bugs": {
-    "url": "https://github.com/janosh/awesome-svelte-kit/issues"
-  },
+  "bugs": "https://github.com/janosh/awesome-svelte-kit/issues",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -21,28 +19,28 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.26",
-    "@sveltejs/kit": "^1.0.0-next.225",
+    "@sveltejs/kit": "^1.0.0-next.252",
     "@svicons/fa-brands": "^0.1.6",
     "@svicons/octicons": "^0.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-svelte3": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-plugin-svelte3": "^3.4.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "^3.2.0",
     "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.1",
-    "puppeteer": "^13.0.1",
-    "svelte": "^3.46.0",
-    "svelte-check": "^2.2.12",
+    "prettier-plugin-svelte": "^2.6.0",
+    "puppeteer": "^13.1.3",
+    "svelte": "^3.46.3",
+    "svelte-check": "^2.4.1",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^3.0.1",
-    "svelte-preprocess": "^4.10.1",
-    "svelte2tsx": "^0.4.13",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "svelte-multiselect": "^3.1.1",
+    "svelte-preprocess": "^4.10.2",
+    "svelte2tsx": "^0.5.1",
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13"
   },
   "keywords": [
     "svelte-kit",
