Changed my twitter username

--- a/sites.yml
+++ b/sites.yml
@@ -539,7 +539,7 @@
   title: Kudadam.com
   creators:
     - name: Lucretius Biah
-      twitter: lucretius_1
+      twitter: kudadam_
   url: https://kudadam.com
   repo: https://github.com/kudadam/kudadam.com
   description: Personal website and blog.
