--- a/.github/workflows/newSite.yml
+++ b/.github/workflows/newSite.yml
@@ -1,4 +1,4 @@
-name: Update readme.md + site screenshots on changed sites.yml
+name: Update readme + site screenshots on changed sites.yml
 
 on:
   pull_request:
@@ -12,11 +12,13 @@ on:
     - cron: '0 0 1 */3 *' # https://crontab.guru/every-quarter
 
 jobs:
-  take-screenshots:
+  new-site:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Set up node
         uses: actions/setup-node@v2
@@ -32,36 +34,11 @@ jobs:
         if: github.event_name == 'schedule'
         run: node site/scripts/screenshots.js update-existing
 
-      - name: Add screenshots for new sites on PRs/push to main and manually dispatched runs
+      - name: Add screenshots for new sites and update readme
         if: github.event_name != 'schedule'
-        run: node site/scripts/screenshots.js
-
-  update-readme:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
-
-      - name: Set up node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 17
-          cache: yarn
-          cache-dependency-path: site/yarn.lock
-
-      - name: Install dependencies
-        run: yarn add js-yaml
-
-      - name: Update site list in readme.md
-        if: github.event_name != 'schedule'
-        run: node site/scripts/readmeSiteList.js
-
-  push-changes:
-    runs-on: ubuntu-latest
-    needs: [take-screenshots, update-readme]
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
+        run: |
+          node site/scripts/screenshots.js
+          node site/scripts/readmeSiteList.js
 
       - name: Push changes if any
         run: |
@@ -71,5 +48,6 @@ jobs:
           fi
           git config user.name 'Janosh Riebesell'
           git config user.email janosh.riebesell@gmail.com
-          git commit -a -m 'update site screenshots'
+          git add readme.md site/static/screenshots
+          git commit -m 'update readme + screenshots'
           git push
