Fetch repo contributors (just like start count) from GitHub (#55)
* fetch site contributors on-the-fly in site/scripts/parseSitesYaml.js

* write GH metadata to site/src/sites.yml (.js before) and don't gitignore to speed up CI builds

* normal contributor URLs when not starting with https:// or using http://

--- a/.github/workflows/newSite.yml
+++ b/.github/workflows/newSite.yml
@@ -27,9 +27,11 @@ jobs:
       - name: Install dependencies
         run: yarn add puppeteer js-yaml imagemin imagemin-webp
 
-      - name: Update existing screenshots on scheduled runs
+      - name: Update existing site screenshots and repo contributors on scheduled runs
         if: github.event_name == 'schedule'
-        run: node site/scripts/screenshots.js update-existing
+        run: |
+          node site/scripts/screenshots.js update-existing
+          node site/scripts/parseSitesYaml.js update-existing
 
       - name: Add screenshots for new sites and update readme
         if: github.event_name != 'schedule'
