--- a/site/package.json
+++ b/site/package.json
@@ -18,12 +18,14 @@
     "check": "svelte-check"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^3.1.0",
     "@sveltejs/adapter-static": "^1.0.0-next.26",
     "@sveltejs/kit": "^1.0.0-next.260",
     "@svicons/fa-brands": "^0.1.6",
     "@svicons/octicons": "^0.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.8.0",
     "eslint-plugin-svelte3": "^3.4.0",
     "imagemin": "^8.0.1",
@@ -32,13 +34,13 @@
     "node-fetch": "^3.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
-    "puppeteer": "^13.1.3",
+    "puppeteer": "^13.2.0",
     "svelte": "^3.46.4",
-    "svelte-check": "^2.4.2",
+    "svelte-check": "^2.4.3",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^3.2.0",
+    "svelte-multiselect": "^3.2.1",
     "svelte-preprocess": "^4.10.2",
-    "svelte2tsx": "^0.5.2",
+    "svelte2tsx": "^0.5.3",
     "typescript": "^4.5.5",
     "vite": "^2.7.13"
   },
