--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,10 @@
 base = "site/"
 command = "yarn build"
 publish = "build"
-# redeploy if sites.yml or base directory site/ changed
-ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../sites.yml"
+# only redeploy if base directory site/ changed
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
 
 
 [build.environment]
-NODE_VERSION = "17.0.1"
+NODE_VERSION = "17.6.0"
 YARN_VERSION = "1.22.17"
